RESOLVED FIXED76494
Mac fails to fire an 'error' event for a <video> <source> having an URL with no file extension
https://bugs.webkit.org/show_bug.cgi?id=76494
Summary Mac fails to fire an 'error' event for a <video> <source> having an URL with ...
Simon Fraser (smfr)
Reported 2012-01-17 16:38:21 PST
Created attachment 122837 [details] Testcase The compositing/video/video-with-invalid-source.html test times out on Mac because no error event is fired.
Attachments
Testcase (789 bytes, text/html)
2012-01-17 16:38 PST, Simon Fraser (smfr)
no flags
Patch (4.10 KB, patch)
2012-01-17 17:12 PST, Jer Noble
no flags
Patch (4.13 KB, patch)
2012-01-17 17:16 PST, Jer Noble
eric.carlson: review+
Jer Noble
Comment 1 2012-01-17 17:12:50 PST
Simon Fraser (smfr)
Comment 2 2012-01-17 17:15:04 PST
Comment on attachment 122844 [details] Patch r=me but please add a test in media/ for this. In another bug I change the compositing test.
Jer Noble
Comment 3 2012-01-17 17:16:15 PST
Created attachment 122845 [details] Patch Rebased & should apply to ToT.
Alexey Proskuryakov
Comment 4 2012-01-17 18:50:25 PST
What's invalid about this URL? It seems perfectly valid, just missing on server.
James Robinson
Comment 5 2012-01-17 18:53:12 PST
That's the issue - even if nothing is there on the server no error event is fired. The layout test in question tried to set src to "notarealsource", but no error event was ever fired in safari or in mac DRT
Eric Carlson
Comment 6 2012-01-17 20:13:58 PST
(In reply to comment #5) > That's the issue - even if nothing is there on the server no error event is fired. The layout test > in question tried to set src to "notarealsource", but no error event was ever fired in safari or > in mac DRT Actually the problem is not that the file doesn't exist, the problem is that the url has no MIME type or extension so MediaPlayer can't find a media engine to use. If it did have a type or extension and there was a media registered for the type, MediaPlayer would ask it to load the url and it would return an error when it figured out that the file didn't exist.
Alexey Proskuryakov
Comment 7 2012-01-17 20:59:32 PST
It would be helpful to have bug title and ChangeLog changed accordingly. We have enough trouble with actual invalid KURLs...
Jer Noble
Comment 8 2012-01-18 08:39:16 PST
Note You need to log in before you can comment on or make changes to this bug.