Mac fails to fire an 'error' event for a <video> <source> having an URL with no file extension https://bugs.webkit.org/show_bug.cgi?id=76494

Reviewed by Eric Carlson.

No new tests; fixes compositing/video/video-with-invalid-source.html. Modified
media/video-source-error-no-candidate.html to check error condition.

When we run out of media engines for a given resource, inform the media player client
that resource loading failed by calling mediaPlayerResourceNotSupported().

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::mediaPlayerResourceNotSupported):
* html/HTMLMediaElement.h:
* platform/graphics/MediaPlayer.cpp:
(WebCore::MediaPlayer::loadWithNextMediaEngine):
* platform/graphics/MediaPlayer.h:
(WebCore::MediaPlayerClient::mediaPlayerResourceNotSupported):

Canonical link: https://commits.webkit.org/93360@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@105279 268f45cc-cd09-0410-ab3c-d52691b4dbfc